--- a/My3DSLoginApp/app/src/main/res/layout/activity_welcome_screen_landingactivity.xml
+++ b/My3DSLoginApp/app/src/main/res/layout/activity_welcome_screen_landingactivity.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".WelcomeScreenLandingactivity">
 
+    <WebView
+        android:id="@+id/mywebview"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
