--- a/ImDbApp/app/src/main/res/layout/layout_adapter.xml
+++ b/ImDbApp/app/src/main/res/layout/layout_adapter.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="@color/colorcard"
-    >
+    app:cardCornerRadius="10dp"
+    app:cardElevation="8dp">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:background="#F1EFEA">
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="80dp"
